# HowToCook

./: .gitignore  pyproject.toml
tasks/: readmd.md  server.py
tasks/extract_data/: main.py  parser.py  readme.md  retrival.py  util.py
tasks/tag/: readme.md
